<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPass">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="131dp"
        android:text="@string/forgot"
        android:textColor="#1a1a1a"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/please_enter_your_phone_number_to_continue"
        android:textColor="#868686"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/welcome"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <View
        android:id="@+id/third"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:background="@drawable/bg2_button_round_10dp"
        app:layout_constraintTop_toBottomOf="@id/second"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_91"
        android:drawableEnd="@drawable/polygon_19"
        android:textColor="#1d1d1d"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/third"
        app:layout_constraintTop_toTopOf="@id/third"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@id/third"/>

        <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_button_round_10dp"
        app:layout_constraintStart_toStartOf="@id/third"
        app:layout_constraintTop_toBottomOf="@id/third"
        android:layout_marginTop="20dp"
        android:text="@string/cn"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="22dp"
        android:src="@drawable/back"
        android:clickable="true"
        android:focusable="true"
        android:onClick="hf"/>


</androidx.constraintlayout.widget.ConstraintLayout>